# bridgewater-final

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  claude.md  pyproject.toml  setup.md
demo/: app.py
frontend/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: EventInputPanel.tsx  Header.tsx  InspectorPane.tsx  LogStream.tsx  PipelineStages.tsx
logs/run_20260425_034929_100/: state.json
logs/run_20260425_043659_308/: state.json
logs/test_run_42/: state.json
prompts/: adversary.md  analog_search.md  consensus.md  defender.md  idea.md  logic_verifier.md  macro_comparator.md  moderator.md  portfolio.md  pruner.md  scenario.md  sensitivity.md  tree_builder.md
src/: config.py  orchestrator.py  types.py
src/agents/: _common.py  adversary.py  analog_search.py  consensus.py  defender.py  idea.py  logic_verifier.py  macro_comparator.py  moderator.py  portfolio.py  pruner.py  scenario.py  sensitivity.py  tree_builder.py
src/tools/: __init__.py  cache.py  fred.py  hf.py  yahoo.py
src/ui/: app.py
src/ui/static/: index.html
src/viz/: graph.py
tests/: fred_walkthrough.py  test_adversary.py  test_analog_search.py  test_defender.py  test_fred.py  test_fred_live.py  test_hf.py  test_idea.py  test_logic_verifier.py  test_macro_comparator.py  test_moderator.py  test_orchestrator.py  test_portfolio.py  test_pruner.py  test_scenario.py  test_sensitivity.py  test_tree_builder.py  test_tree_builder_demo.py  test_types.py  test_viz.py  test_yahoo.py
(+58 files in other folders)
