[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-impact-scenario-mapper"
version = "0.1.0"
description = "Policy event to causal DAG mapper, with historical analogs and adversarial pruning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39",
    "pydantic>=2.6",
    "networkx>=3.2",
    "pandas>=2.1",
    "numpy>=1.26",
    "fredapi>=0.5",
    "datasets>=2.18",
    "huggingface-hub>=0.22",
    "python-dotenv>=1.0",
    "yfinance>=0.2.40",
    "tenacity>=8.2",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
]
demo = [
    "streamlit>=1.33",
    "pyvis>=0.3.2",
    "graphviz>=0.20",
    "matplotlib>=3.8",
]
news = [
    "httpx>=0.27",
]

[project.scripts]
policy-mapper = "src.orchestrator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
